
.. *Release date: TBD*

Core and Builtins
-----------------

- Issue #17644: Fix a crash in str.format when curly braces are used in square
  brackets.

- Issue #17983: Raise a SyntaxError for a ``global __class__`` statement in a
  class body.

- Issue #17927: Frame objects kept arguments alive if they had been copied into
  a cell, even if the cell was cleared.

Library
-------

- Issue #18025: Fixed a segfault in io.BufferedIOBase.readinto() when raw
  stream's read() returns more bytes than requested.

- Issue #18011: base64.b32decode() now raises a binascii.Error if there are
  non-alphabet characters present in the input string to conform a docstring.
  Updated the module documentation.

- Issue #13772: Restored directory detection of targets in ``os.symlink`` on
  Windows, which was temporarily removed in Python 3.2.3 due to an incomplete
  implementation. The implementation now works even if the symlink is created
  in a location other than the current directory.

- Issue #16986: ElementTree now correctly parses a string input not only when
  an internal XML encoding is UTF-8 or US-ASCII.

- Issue #17812: Fixed quadratic complexity of base64.b32encode().

- Issue #17980: Fix possible abuse of ssl.match_hostname() for denial of
  service using certificates with many wildcards (CVE-2013-2099).

- Issue #17981: Closed socket on error in SysLogHandler.

- Fix typos in the multiprocessing module.

- Issue #17754: Make ctypes.util.find_library() independent of the locale.

- Issue #17968: Fix memory leak in os.listxattr().

- Issue #17269: Workaround for socket.getaddrinfo crash on MacOS X
  with port None or "0" and flags AI_NUMERICSERV.

- Issue #18080: When building a C extension module on OS X, if the compiler
  is overriden with the CC environment variable, use the new compiler as
  the default for linking if LDSHARED is not also overriden.  This restores
  Distutils behavior introduced in 3.2.3 and inadvertently dropped in 3.3.0.

IDLE
----
